# N-Body-Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  generated_bodies.txt  mpi.md  mpi_key  mpi_key.pub  run_swarm_mpi.sh  start-mpi.sh  swarm-mpi.yml
src/include/: Constants.hpp  Simulation.hpp  generateBodies.h  runSimulation.hpp
src/include/models/: Body.hpp
src/include/opengl-framework/: Camera.hpp  DegreeAngle.hpp  OpenGLErrorHandling.hpp  OpenGLFramework.hpp  OpenGLFrameworkException.hpp  VAO.hpp  Window.hpp
src/include/rendering/: Renderer.hpp  axes.h  helpers.hpp  sphere.h
src/include/simulations/: MpiSimulation.hpp  OpenClSimulation.hpp  OpenClSimulationAoS.hpp  OpenClSimulationSoA.hpp  OpenClSimulationSoA1.hpp  OpenClSimulationSoA2.hpp  OpenClSimulationSoA2SplitLoop.hpp  OpenClSimulationSoA2SplitLoopTiled.hpp  OpenMPISimulation.hpp  OpenMpSimulation.hpp  OpenMpSimulationAoS.hpp  OpenMpSimulationSoA.hpp  OpenMpSimulationSoA1.hpp  OpenMpSimulationSoA2.hpp  OpenMpSimulationSoA2SplitLoop.hpp  OpenMpSingleLoopSimulation.hpp  OpenMpSingleLoopSimulationSoA2.hpp  SequentialSimulation.hpp  SequentialSimulationAoS.hpp  SequentialSimulationSoA2.hpp  Simulation.hpp
src/include/util/: SimRunner.hpp  TestSuite.hpp  bodies.h  comparison.hpp  fileUtil.hpp  generateBodies.h  runSimulation.hpp  serializeString.hpp  stopwatch.hpp
src/kernels/: body-force-calculation.cl  body-force-calculationAoS.cl  body-force-calculationSoA.cl  body-force-calculationSoASplitLoop.cl  body-force-calculationSoASplitLoopTiled.cl
src/shader/: vertex.glsl
src/source/: Simulation.cpp  generateBodies.cpp  main-body-gen.cpp  main-mpi.cpp  main-test.cpp  main.cpp  runSimulation.cpp  stopwatch.cpp
src/source/opengl-framework/: Camera.cpp  OpenGLFramework.cpp  Window.cpp
src/source/rendering/: Renderer.cpp  axes.cpp  helpers.cpp  sphere.cpp
src/source/simulations/: MpiSimulation.cpp  OpenClSimulation.cpp  OpenClSimulationAoS.cpp  OpenClSimulationSoA.cpp  OpenClSimulationSoA1.cpp  OpenClSimulationSoA2.cpp  OpenClSimulationSoA2SplitLoop.cpp  OpenClSimulationSoA2SplitLoopTiled.cpp  OpenMpSimulation.cpp  OpenMpSimulationAoS.cpp  OpenMpSimulationSoA.cpp  OpenMpSimulationSoA1.cpp  OpenMpSimulationSoA2.cpp  OpenMpSimulationSoA2SplitLoop.cpp  OpenMpSingleLoopSimulation.cpp  OpenMpSingleLoopSimulationSoA2.cpp  OpenMpiSimulation.cpp  SequentialSimulation.cpp  SequentialSimulationAoS.cpp  SequentialSimulationSoA2.cpp
src/source/util/: TestSuite.cpp  bodies.cpp  fileUtil.cpp  generateBodies.cpp  runSimulation.cpp  serializeString.cpp  stopwatch.cpp
